resolves overflow-x issue on userfeedback

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 html {
   background-color: var(--black);
   color: white;
